[workspace]
resolver = "2"
members = [
    "rpcs3-utilities",
    "rpcs3-config",
    "rpcs3-crypto",
    "rpcs3-loader-psf",
    "rpcs3-loader-elf-self",
    "rpcs3-loader-pkg",
    "rpcs3-loader-pup",
    "rpcs3-emu-types",
    "rpcs3-lv2-syscall-table",
    "rpcs3-loader-mself",
    "rpcs3-vfs-paths",
    "rpcs3-vfs-mount",
    "rpcs3-memory",
    "rpcs3-memory-backing",
    "rpcs3-cpu-thread",
    "rpcs3-ppu-thread",
    "rpcs3-spu-thread",
    "rpcs3-ppu-opcodes",
    "rpcs3-ppu-interpreter",
    "rpcs3-lv2-process",
    "rpcs3-lv2-ppu-thread",
    "rpcs3-lv2-memory",
    "rpcs3-lv2-sync",
    "rpcs3-hle-cellgame",
    "rpcs3-lv2-fs",
    "rpcs3-lv2-timer",
    "rpcs3-hle-cellsysutil",
    "rpcs3-lv2-event",
    "rpcs3-lv2-cond",
    "rpcs3-lv2-lwmutex",
    "rpcs3-hle-cellsavedata",
    "rpcs3-lv2-rwlock",
    "rpcs3-lv2-event-flag",
    "rpcs3-hle-cellpad",
    "rpcs3-hle-cellaudio",
    "rpcs3-lv2-spu-image",
    "rpcs3-hle-cellsync",
    "rpcs3-spu-interpreter",
    "rpcs3-lv2-spu-group",
    "rpcs3-hle-cellspurs",
    "rpcs3-lv2-raw-spu",
    "rpcs3-hle-cellgcm",
    "rpcs3-hle-cellsysmodule",
    "rpcs3-hle-cellrtc",
    "rpcs3-hle-cellnetctl",
    "rpcs3-hle-sys-prx-for-user",
    "rpcs3-hle-cellmsgdialog",
    "rpcs3-hle-cellvideoout",
    "rpcs3-hle-cellfs",
    "rpcs3-hle-cellsyscache",
    "rpcs3-hle-cellusbd",
    "rpcs3-hle-cellssl",
    "rpcs3-hle-cellcamera",
    "rpcs3-hle-cellfont",
    "rpcs3-hle-cellatrac",
    "rpcs3-hle-cellvpost",
    "rpcs3-hle-cellkb",
    "rpcs3-hle-cellmouse",
    "rpcs3-hle-cellkey2char",
    "rpcs3-hle-celladec",
    "rpcs3-hle-cellvdec",
    "rpcs3-hle-cellavconf",
    "rpcs3-hle-cellsail",
    "rpcs3-hle-cellsearch",
    "rpcs3-hle-cellsubdisplay",
    "rpcs3-hle-cellgem",
    "rpcs3-hle-celloskdialog",
    "rpcs3-hle-cellmusic",
    "rpcs3-hle-cellvoice",
    "rpcs3-hle-celluserinfo",
    "rpcs3-hle-cellsysconf",
    "rpcs3-hle-cellphotoimport",
    "rpcs3-hle-cellvideoexport",
    "rpcs3-hle-cellmic",
    "rpcs3-hle-cellscreenshot",
    "rpcs3-hle-cellrudp",
    "rpcs3-hle-cellhttp",
    "rpcs3-hle-cellmusicexport",
    "rpcs3-hle-cellphotoexport",
    "rpcs3-hle-cellhttputil",
    "rpcs3-hle-cellhttps",
    "rpcs3-hle-cellsync2",
    "rpcs3-hle-cellbgdl",
    "rpcs3-hle-cellpamf",
    "rpcs3-hle-cellfiber",
    "rpcs3-hle-cellovis",
    "rpcs3-hle-cellrec",
    "rpcs3-hle-cellstorage",
    "rpcs3-hle-celljpgdec",
    "rpcs3-hle-cellpngdec",
    "rpcs3-hle-celljpgenc",
    "rpcs3-hle-cellpngenc",
    "rpcs3-hle-celldmux",
    "rpcs3-hle-cellfs-sdata",
    "rpcs3-hle-celltrophy",
    "rpcs3-hle-cellspudll",
    "rpcs3-hle-cellgifdec",
    "rpcs3-hle-cellfont-ft",
    "rpcs3-hle-sys-libc",
    "rpcs3-hle-sys-heap",
    "rpcs3-hle-sys-mempool",
    "rpcs3-hle-libfs-utility",
    "rpcs3-hle-sys-prx-user",
    "rpcs3-hle-sys-lwmutex-user",
    "rpcs3-hle-sys-lwcond-user",
    "rpcs3-hle-sys-mmapper-user",
    "rpcs3-hle-sys-ppu-thread-user",
    "rpcs3-hle-sys-spu-user",
    "rpcs3-hle-sys-net-user",
    "rpcs3-hle-sys-io-user",
    "rpcs3-hle-sys-rsxaudio-user",
    "rpcs3-hle-sys-game-user",
    "rpcs3-hle-sys-crashdump",
    "rpcs3-hle-sys-lv2dbg",
    "rpcs3-hle-static-hle",
    "rpcs3-hle-hle-patches",
    "rpcs3-hle-libmedi",
    "rpcs3-hle-libmixer",
    "rpcs3-hle-libsnd3",
    "rpcs3-hle-libsynth2",
    "rpcs3-hle-cellpesmutility",
    "rpcs3-hle-celldaisy",
    "rpcs3-hle-cellauthdialog",
    "rpcs3-hle-cellprint",
    "rpcs3-hle-cellresc",
    "rpcs3-hle-libad-core",
    "rpcs3-hle-libad-async",
    "rpcs3-hle-cellmusicdecode",
    "rpcs3-hle-cellcrosscontroller",
    "rpcs3-hle-celldtcpiputility",
    "rpcs3-hle-cellmusicselectioncontext",
    "rpcs3-hle-cellgameexec",
    "rpcs3-hle-cellsheap",
    "rpcs3-hle-cellrtcalarm",
    "rpcs3-hle-cellremoteplay",
    "rpcs3-hle-cellnetaoi",
    "rpcs3-hle-celllibprof",
    "rpcs3-hle-cellsysutilap",
    "rpcs3-hle-cellcelpenc",
    "rpcs3-hle-cellcelp8enc",
    "rpcs3-hle-cellsysutilmisc",
    "rpcs3-hle-cellvideoupload",
    "rpcs3-hle-cellsysutilnpeula",
    "rpcs3-hle-cellvideoplayerutility",
    "rpcs3-hle-cellphotodecode",
    "rpcs3-hle-cellusbpspcm",
    "rpcs3-hle-cellwebbrowser",
    "rpcs3-hle-cellsysutilavc",
    "rpcs3-hle-cellsysutilavcext",
    "rpcs3-hle-cellatracmulti",
    "rpcs3-hle-cellsysutilavc2",
    "rpcs3-hle-cellsailrec",
    "rpcs3-hle-cellspursjq",
    "rpcs3-hle-scenpsns",
    "rpcs3-hle-scenpmatchingint",
    "rpcs3-hle-scenpplus",
    "rpcs3-hle-scenputil",
    "rpcs3-lv2-bdemu",
    "rpcs3-lv2-btsetting",
    "rpcs3-lv2-console",
    "rpcs3-lv2-crypto-engine",
    "rpcs3-lv2-gpio",
    "rpcs3-lv2-trace",
    "rpcs3-lv2-io",
    "rpcs3-lv2-gamepad",
    "rpcs3-lv2-sm",
    "rpcs3-lv2-dbg",
    "rpcs3-lv2-hid",
    "rpcs3-lv2-tty",
    "rpcs3-lv2-interrupt",
    "rpcs3-lv2-game",
    "rpcs3-lv2-overlay",
    "rpcs3-hle-cellaudioout",
    "rpcs3-hle-cellavconfext",
    "rpcs3-hle-scenp2",
    "rpcs3-hle-scenpclans",
    "rpcs3-hle-scenpcommerce2",
    "rpcs3-hle-scenptus",
    "rpcs3-hle-scenp",
    "rpcs3-hle-cellimejp",
    "rpcs3-hle-cell-freetype2",
    "rpcs3-hle-cellatracxdec",
    "rpcs3-hle-cell-l10n",
    "rpcs3-hle-celldmuxpamf",
    "rpcs3-hle-cellgcmsys",
    "rpcs3-audio-utils",
    "rpcs3-audio-resampler",
    "rpcs3-audio-dumper",
    "rpcs3-audio-backend",
    "rpcs3-io-buzz",
    "rpcs3-io-ghltar",
    "rpcs3-io-gametablet",
    "rpcs3-io-turntable",
    "rpcs3-io-guncon3",
    "rpcs3-io-kamenrider",
    "rpcs3-io-dimensions",
    "rpcs3-io-skylander",
    "rpcs3-io-infinity",
    "rpcs3-io-usio",
    "rpcs3-audio-device-enumerator",
    "rpcs3-loader-tar",
    "rpcs3-loader-trp",
    "rpcs3-loader-tropusr",
    "rpcs3-loader-iso",
    "rpcs3-loader-disc",
    "rpcs3-loader-iso-cache",
    "rpcs3-np-countries",
    "rpcs3-spu-mfc",
    "rpcs3-io-interception",
    "rpcs3-io-usb-vfs",
    "rpcs3-ipc-config",
    "rpcs3-np-upnp-config",
    "rpcs3-io-recording-config",
    "rpcs3-io-rb3drums-config",
    "rpcs3-io-mouse-config",
    "rpcs3-io-pad-config-types",
    "rpcs3-io-midi-config-types",
    "rpcs3-io-g27-config-types",
    "rpcs3-localized-string",
    "rpcs3-rsx-gsframe",
    "rpcs3-system-config-random",
    "rpcs3-perf-monitor",
    "rpcs3-rsx-vertex-data",
    "rpcs3-rsx-texture-cache-types",
    "rpcs3-rsx-gl-decompiler",
    "rpcs3-rsx-gl-common",
    "rpcs3-io-camera-config",
    "rpcs3-rsx-vk-decompiler",
    "rpcs3-hle-sys-spinlock",
    "rpcs3-rsx-surface-store",
    "rpcs3-version",
    "rpcs3-util-console",
    "rpcs3-util-cheat-info",
    "rpcs3-emu-core",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "GPL-2.0-only"
repository = "https://github.com/RPCS3/rpcs3"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1        # keep line info for perf/diff vs C++ build

[profile.release-with-debug]
inherits = "release"
debug = 2
