[package]
name = "rpcs3-audio-utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Audio/audio_utils.cpp — global volume + mute state + non-linear volume scaling."

[lib]
name = "rpcs3_audio_utils"
crate-type = ["staticlib", "rlib"]

[dependencies]

[lints]
workspace = true
