[package]
name = "rpcs3-cpu-thread"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/CPU/CPUThread.h — cpu_thread state machine on atomic_bs_t<cpu_flag>. Wave 4a: safe state ops, no scheduler hooks."

[lib]
name = "rpcs3_cpu_thread"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
