[package]
name = "rpcs3-emu-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Integration crate: wires PPU interpreter + lv2 syscalls + memory backing + ELF loader into an executable runner. Can boot a PPU ELF and run until process exit."

[lib]
name = "rpcs3_emu_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types        = { path = "../rpcs3-emu-types" }
rpcs3-memory           = { path = "../rpcs3-memory" }
rpcs3-memory-backing   = { path = "../rpcs3-memory-backing" }
rpcs3-ppu-thread       = { path = "../rpcs3-ppu-thread" }
rpcs3-ppu-interpreter  = { path = "../rpcs3-ppu-interpreter" }
rpcs3-loader-elf-self  = { path = "../rpcs3-loader-elf-self" }
rpcs3-lv2-process      = { path = "../rpcs3-lv2-process" }
rpcs3-lv2-ppu-thread   = { path = "../rpcs3-lv2-ppu-thread" }
rpcs3-spu-thread       = { path = "../rpcs3-spu-thread" }
rpcs3-spu-interpreter  = { path = "../rpcs3-spu-interpreter" }
rpcs3-lv2-spu-group    = { path = "../rpcs3-lv2-spu-group" }
rpcs3-lv2-spu-image    = { path = "../rpcs3-lv2-spu-image" }
rpcs3-lv2-tty          = { path = "../rpcs3-lv2-tty" }
rpcs3-lv2-sync         = { path = "../rpcs3-lv2-sync" }
rpcs3-lv2-lwmutex      = { path = "../rpcs3-lv2-lwmutex" }
rpcs3-lv2-event        = { path = "../rpcs3-lv2-event" }
rpcs3-lv2-cond         = { path = "../rpcs3-lv2-cond" }
# VFS layer — lv2 filesystem engine (FileSystem trait + sys_fs_* + FdTable),
# backed by an in-memory MemVfs (src/vfs.rs). Unlocks cellFs/savedata/font.
rpcs3-lv2-fs           = { path = "../rpcs3-lv2-fs" }
# R13.6 — first HLE-crate integration: cellSysutil system-param lookups.
rpcs3-hle-cellsysutil  = { path = "../rpcs3-hle-cellsysutil" }
# HLE wave — cellSysModule dynamic loader (stateful: SysmoduleManager field).
rpcs3-hle-cellsysmodule = { path = "../rpcs3-hle-cellsysmodule" }
# HLE wave — cellVideoOut (stateless resolution-id -> width/height lookup).
rpcs3-hle-cellvideoout = { path = "../rpcs3-hle-cellvideoout" }
# HLE wave — sys_net (inet_addr firmware stub).
rpcs3-hle-sys-net-user = { path = "../rpcs3-hle-sys-net-user" }
# HLE wave — cellNetCtl (stateful NetCtlManager + connected-backend provider).
rpcs3-hle-cellnetctl   = { path = "../rpcs3-hle-cellnetctl" }
# HLE wave — cellGame (GameState provider for PSF param lookups).
rpcs3-hle-cellgame     = { path = "../rpcs3-hle-cellgame" }
# Callback wave — cellMsgDialog (DialogManager; first call_guest_function consumer
# beyond cellSysutil).
rpcs3-hle-cellmsgdialog = { path = "../rpcs3-hle-cellmsgdialog" }
# R18 — cellFont byte-exact glyph metrics (StbttFont via stb_truetype, the same
# engine RPCS3 cellFont links).
rpcs3-hle-cellfont     = { path = "../rpcs3-hle-cellfont" }
# HLE backlog — cellJpgDec (stateful JpgDec; header parse byte-exact).
rpcs3-hle-celljpgdec   = { path = "../rpcs3-hle-celljpgdec" }
# HLE backlog — cellPad (input GetInfo2; deterministic headless = 0 pads).
rpcs3-hle-cellpad      = { path = "../rpcs3-hle-cellpad" }
# HLE backlog — cellKb / cellMouse (input GetInfo; deterministic headless).
rpcs3-hle-cellkb       = { path = "../rpcs3-hle-cellkb" }
rpcs3-hle-cellmouse    = { path = "../rpcs3-hle-cellmouse" }
# Optional: the Cranelift SPU JIT, gated behind the `spu-recompiler`
# feature so default builds stay lean (no Cranelift) and the gate keeps
# using the interpreter unless explicitly opted in.
rpcs3-spu-recompiler   = { path = "../rpcs3-spu-recompiler", optional = true }
rpcs3-spu-differential = { path = "../rpcs3-spu-differential", optional = true }

[features]
# Opt-in: allow SPU execution to be routed through the Cranelift JIT
# (RecompilerExecutor) instead of the interpreter, selected at runtime via
# EmuCore::spu_backend. Default OFF — the JIT only wins on hot loops
# (docs/PORT_STATUS_AND_ROADMAP.md §4.2), so always-JIT is NOT the default.
spu-recompiler = ["dep:rpcs3-spu-recompiler", "dep:rpcs3-spu-differential"]
# R20 — cellFont glyph rasterization via vendored C stb_truetype. Default OFF so
# the standard build stays pure-Rust (no C toolchain); enables the render path +
# its byte-exact oracle (single_font_render_v1).
cellfont-raster = ["rpcs3-hle-cellfont/cellfont-raster"]

[dev-dependencies]
# R12.11b — decode the captured RSX command stream from the gcm
# fixture's TTY dump.
rpcs3-rsx-state = { path = "../rpcs3-rsx-state" }
# R13.5d — decode a captured RSX stream into an RsxState to assert SetState
# registers (viewport) that aren't exposed in RsxSnapshot.
rpcs3-rsx-fifo  = { path = "../rpcs3-rsx-fifo" }

[lints]
workspace = true
