[package]
name = "rpcs3-hle-cell-freetype2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cell_FreeType2.cpp — PS3 FreeType2 font rendering HLE (stubs)."

[lib]
name = "rpcs3_hle_cell_freetype2"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
