[package]
name = "rpcs3-hle-cell-l10n"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellL10n.cpp — PS3 localization / codepage conversion HLE."

[lib]
name = "rpcs3_hle_cell_l10n"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
