[package]
name = "rpcs3-hle-cellatracmulti"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellAtracMulti.cpp — PS3 ATRAC multi-track audio decoder HLE stubs."

[lib]
name = "rpcs3_hle_cellatracmulti"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
