[package]
name = "rpcs3-hle-cellatracxdec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellAtracXdec.cpp — PS3 ATRAC3plus SPU-decoder HLE (contract-only)."

[lib]
name = "rpcs3_hle_cellatracxdec"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
