[package]
name = "rpcs3-hle-cellaudioout"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellAudioOut.cpp — PS3 audio-out config + sound-mode negotiation HLE."

[lib]
name = "rpcs3_hle_cellaudioout"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
