[package]
name = "rpcs3-hle-cellauthdialog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellAuthDialog.cpp — PS3 auth dialog utility HLE."

[lib]
name = "rpcs3_hle_cellauthdialog"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
