[package]
name = "rpcs3-hle-cellavconfext"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellAvconfExt.cpp — PS3 audio/video config extensions HLE."

[lib]
name = "rpcs3_hle_cellavconfext"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
