[package]
name = "rpcs3-hle-cellcelp8enc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellCelp8Enc.cpp — PS3 CELP8 / 8kHz MPE speech encoder HLE."

[lib]
name = "rpcs3_hle_cellcelp8enc"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
