[package]
name = "rpcs3-hle-celldaisy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellDaisy.cpp — PS3 Daisy lock-free queue + SPU interlock HLE."

[lib]
name = "rpcs3_hle_celldaisy"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
