[package]
name = "rpcs3-hle-celldtcpiputility"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellDtcpIpUtility.cpp — PS3 DTCP-IP copy-protection HLE stubs."

[lib]
name = "rpcs3_hle_celldtcpiputility"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
