[package]
name = "rpcs3-hle-cellfiber"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellFiber.cpp — PPU fiber (coroutine) HLE."

[lib]
name = "rpcs3_hle_cellfiber"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
