[package]
name = "rpcs3-hle-cellfont-ft"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellFontFT.cpp — FreeType font library HLE variant."

[lib]
name = "rpcs3_hle_cellfont_ft"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
