[package]
name = "rpcs3-hle-cellfont"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellFont.cpp — text rendering HLE (font libraries, renderers, glyphs)."

[lib]
name = "rpcs3_hle_cellfont"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }

[lints]
workspace = true
