[package]
name = "rpcs3-hle-cellfont"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust port of rpcs3/Emu/Cell/Modules/cellFont.cpp — text rendering HLE (font libraries, renderers, glyphs)."

[lib]
name = "rpcs3_hle_cellfont"
crate-type = ["staticlib", "rlib"]

[dependencies]
rpcs3-emu-types = { path = "../rpcs3-emu-types" }
# Faithful Rust port of stb_truetype.h — the SAME engine RPCS3 cellFont uses
# (cellFont.cpp includes stb_truetype.h), so glyph metrics are byte-exact.
stb_truetype = "0.3"

[features]
# Opt-in glyph RASTERIZATION via the vendored C stb_truetype.h (cbits/), the one
# cellFont path that needs the actual stb rasterizer for byte-exact parity with
# RPCS3. Default OFF so the standard build stays pure-Rust (no C toolchain).
cellfont-raster = ["dep:cc"]

[build-dependencies]
cc = { version = "1", optional = true }

[lints]
workspace = true
